I have updated all files

--- a/about.html
+++ b/about.html
@@ -10,112 +10,144 @@
 </head>
 <body>
 
-<section id="about" class="py-5 bg-light">
+  <header class="main-header">
+  <div class="header-container">
+
+    <div class="site-logo">
+      <img src="logo.svg" alt="TymeTek Logo">
+    </div>
+
+    <nav class="site-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="payment.html">Payment</a>
+      <a href="support.html" class="nav-btn">Contact</a>
+    </nav>
+
+  </div>
+</header>
+
+  <section id="about" class="py-5">
   <div class="container">
 
-    <!-- Section Heading -->
-    <div class="text-center mb-5 header">
-      <h2 class="fw-bold">About TimeTag</h2>
-      <p class="text-muted mt-2">
-        Building modern digital solutions with clarity, quality, and trust.
+    <div class="text-center mb-5 mt-5">
+      <h2 class="display-4 fw-bold main-title">About <span class="text-primary">TimeTek</span></h2>
+      <p class="sub-text mx-auto">
+        Empowering businesses with cutting-edge digital solutions. We turn your vision into high-performance web experiences.
       </p>
     </div>
 
-    <!-- Who We Are -->
-    <div class="row align-items-center mb-5">
+    <div class="row align-items-center mb-5 g-5">
       <div class="col-lg-6">
-        <h4 class="fw-semibold">Who We Are</h4>
+        <h3 class="fw-bold mb-3">Innovative Solutions for the Digital Era</h3>
+        <p class="lead-text">
+          TimeTek is a premier technology partner specializing in web and software development. We bridge the gap between complex ideas and user-friendly digital products.
+        </p>
         <p class="text-muted">
-          TimeTag is a technology-focused startup providing professional web and
-          software development services. We help businesses transform ideas into
-          scalable digital products using modern technologies.
+         Our goal is not to write code, but to create simple solutions that will help your business grow. We use modern tech stacks and agile methodologies.
         </p>
       </div>
       <div class="col-lg-6 text-center">
-        <img src="pricing.svg"
-             alt="About TimeTag"
-             class="img-fluid rounded shadow-sm">
+        <div class="about-img-wrapper">
+          <img src="pricing.svg" alt="TimeTek Innovation" class="img-fluid rounded-4 shadow-lg">
+        </div>
       </div>
     </div>
 
-    <!-- Vision & Mission -->
-    <div class="row mb-5">
+    <div class="row mb-5 g-4">
       <div class="col-md-6">
-        <h5 class="fw-semibold">Our Vision</h5>
-        <p class="text-muted">
-          To become a trusted global technology partner by delivering innovative,
-          reliable, and future-ready digital solutions.
-        </p>
+        <div class="card h-100 p-4 shadow-sm border-0 bg-light">
+          <h5 class="fw-bold text-primary">Our Vision</h5>
+          <p class="text-muted mb-0">
+            To become a trusted tech partner worldwide, known for innovation and reliability.
+          </p>
+        </div>
       </div>
       <div class="col-md-6">
-        <h5 class="fw-semibold">Our Mission</h5>
-        <p class="text-muted">
-          Our mission is to deliver high-quality digital products through
-          transparent communication, clean development practices, and timely
-          execution.
-        </p>
+        <div class="card h-100 p-4 shadow-sm border-0 bg-light">
+          <h5 class="fw-bold text-primary">Our Mission</h5>
+          <p class="text-muted mb-0">
+            Delivering every project on time and in the best possible way through quality coding and transparent communication.
+          </p>
+        </div>
       </div>
     </div>
 
-    <!-- Why Choose Us -->
-    <div class="row text-center mb-5">
-      <h4 class="fw-semibold mb-4">Why Choose TimeTag</h4>
-
-      <div class="col-md-3 mb-3">
-        <div class="p-3 border rounded h-100">
+    <div class="text-center mb-5">
+      <h3 class="fw-bold">Why Partners Trust Us</h3>
+    </div>
+    <div class="row g-4 mb-5">
+      <div class="col-md-3">
+        <div class="feature-card text-center h-100">
+          <div class="icon-box">🚀</div>
           <h6 class="fw-bold">Modern Tech</h6>
-          <p class="text-muted small">We use updated and scalable technologies.</p>
+          <p class="small text-muted">Latest frameworks (React, Node, etc.) Used.</p>
         </div>
       </div>
-
-      <div class="col-md-3 mb-3">
-        <div class="p-3 border rounded h-100">
-          <h6 class="fw-bold">Clear Process</h6>
-          <p class="text-muted small">Simple, transparent, and structured workflow.</p>
+      <div class="col-md-3">
+        <div class="feature-card text-center h-100">
+          <div class="icon-box">🛡️</div>
+          <h6 class="fw-bold">Reliable Code</h6>
+          <p class="small text-muted">Clean and bug-free development is our hallmark..</p>
         </div>
       </div>
-
-      <div class="col-md-3 mb-3">
-        <div class="p-3 border rounded h-100">
-          <h6 class="fw-bold">On-Time Delivery</h6>
-          <p class="text-muted small">We respect deadlines and commitments.</p>
+      <div class="col-md-3">
+        <div class="feature-card text-center h-100">
+          <div class="icon-box">📅</div>
+          <h6 class="fw-bold">Punctuality</h6>
+          <p class="small text-muted">Your time is valuable, we respect your time.</p>
         </div>
       </div>
-
-      <div class="col-md-3 mb-3">
-        <div class="p-3 border rounded h-100">
-          <h6 class="fw-bold">Growing Team</h6>
-          <p class="text-muted small">Focused team with a long-term vision.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- How We Work -->
-    <div class="row mb-5">
-      <div class="col-lg-12">
-        <h4 class="fw-semibold text-center mb-4">How We Work</h4>
-        <div class="row text-center">
-          <div class="col-md-2 offset-md-1">📋 Requirements</div>
-          <div class="col-md-2">📄 Proposal</div>
-          <div class="col-md-2">💳 Advance</div>
-          <div class="col-md-2">💻 Development</div>
-          <div class="col-md-2">🚀 Delivery</div>
+      <div class="col-md-3">
+        <div class="feature-card text-center h-100">
+          <div class="icon-box">🤝</div>
+          <h6 class="fw-bold">Full Support</h6>
+          <p class="small text-muted">We are with you even after project delivery.</p>
         </div>
       </div>
     </div>
 
-    <!-- CTA -->
-    <div class="text-center">
-      <h5 class="fw-semibold">Let’s Build Something Great</h5>
-      <p class="text-muted">
-        Ready to start your project? Let’s discuss your idea.
-      </p>
-      <a href="#contact" class="btn btn-primary px-4">
-        Get a Quote
-      </a>
+    <div class="process-section py-5 rounded-4 text-white text-center shadow-lg">
+      <h4 class="fw-bold mb-5">Our Seamless Process</h4>
+      <div class="row g-2 justify-content-center">
+        <div class="col-6 col-md-2 step"><span>1</span><p>Consultation</p></div>
+        <div class="col-6 col-md-2 step"><span>2</span><p>Strategy</p></div>
+        <div class="col-6 col-md-2 step"><span>3</span><p>Design</p></div>
+        <div class="col-6 col-md-2 step"><span>4</span><p>Develop</p></div>
+        <div class="col-6 col-md-2 step"><span>5</span><p>Launch</p></div>
+      </div>
+    </div>
+
+    <div class="text-center mt-5 py-4">
+      <h4 class="fw-bold">Ready to Elevate Your Business?</h4>
+      <p class="text-muted">Let's discuss how TimeTek can bring your project to life.</p>
+      <a href="#contact" class="btn btn-primary btn-lg rounded-pill px-5 shadow">Get a Free Quote</a>
     </div>
 
   </div>
+</section>
+  <footer class="footer-section">
+  <div class="footer-content">
+
+    <div class="footer-brand">
+      <h3>TymeTek</h3>
+      <p>Professional Web Design & Development Services</p>
+    </div>
+
+    <div class="footer-socials">
+      <a href="#"><i class="fi fi-brands-facebook"></i></a>
+      <a href="#"><i class="fi fi-brands-whatsapp"></i></a>
+      <a href="#"><i class="fi fi-ss-circle-envelope"></i></a>
+    </div>
+
+    <div class="footer-bottom">
+      © 2025 TymeTek. All Rights Reserved.
+    </div>
+
+  </div>
+</footer>
 </section>
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
