--- a/services.html
+++ b/services.html
@@ -13,72 +13,130 @@
 </head>
 <body>
 
-  <!-- SERVICES SECTION -->
-  <section id="services" class="py-5">
-    <div class="container">
+  <header class="main-header">
+  <div class="header-container">
 
-      <!-- Section Header -->
-      <div class="text-center mb-5">
-        <h2 class="animated-heading">Our Services</h2>
-        <p class="text-muted">
-          Explore our expert services designed to help your business grow, from web development to software solutions.
-        </p>
+    <div class="site-logo">
+      <img src="logo.svg" alt="TymeTek Logo">
+    </div>
+
+    <nav class="site-nav">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="payment.html">Payment</a>
+      <a href="support.html" class="nav-btn">Contact</a>
+    </nav>
+
+  </div>
+</header>
+
+
+
+  <section id="services" class="py-5 bg-dark-custom">
+  <div class="container">
+
+    <div class="text-center mb-5 mt-4">
+      <span class="text-primary fw-bold text-uppercase tracking-wider ">Our Expertise</span>
+      <h2 class="display-5 fw-bold text-white mt-2 animated-heading">Premium Digital Services</h2>
+      <div class="heading-line mx-auto"></div>
+      <p class="text-light-muted mx-auto mt-3">
+        We provide end-to-end digital transformation. From conceptualization to deployment, 
+        TimeTek ensures your business stays ahead of the curve.
+      </p>
+    </div>
+
+    <div class="row g-4">
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
+            <i class="bi bi-laptop"></i>
+          </div>
+          <h5>Web Development</h5>
+          <p>High-performance, SEO-friendly websites tailored to your specific business goals.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
+        </div>
       </div>
 
-      <!-- Services Cards -->
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="service-card">
-            <i class="bi bi-laptop"></i>
-            <h5>Web Development</h5>
-            <p>Custom websites, responsive designs, and business solutions for all industries.</p>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="service-card">
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
             <i class="bi bi-phone"></i>
-            <h5>Mobile App Development</h5>
-            <p>iOS and Android apps with smooth UI/UX and robust functionality.</p>
           </div>
+          <h5>Mobile Solutions</h5>
+          <p>Native and cross-platform mobile applications with seamless user experiences.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
+      </div>
 
-        <div class="col-md-4">
-          <div class="service-card">
-            <i class="bi bi-pie-chart"></i>
-            <h5>Software Development</h5>
-            <p>Custom desktop and cloud-based software solutions tailored for your business.</p>
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
+            <i class="bi bi-cpu"></i>
           </div>
+          <h5>Software Engineering</h5>
+          <p>Bespoke software systems designed to automate and scale your internal operations.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
+      </div>
 
-        <div class="col-md-4">
-          <div class="service-card">
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
             <i class="bi bi-bar-chart-line"></i>
-            <h5>Data Analytics</h5>
-            <p>Turn your business data into actionable insights and strategies.</p>
           </div>
+          <h5>Data Intelligence</h5>
+          <p>Transform raw data into meaningful insights with our advanced analytics tools.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
+      </div>
 
-        <div class="col-md-4">
-          <div class="service-card">
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
             <i class="bi bi-shield-lock"></i>
-            <h5>Cybersecurity</h5>
-            <p>Protect your systems and data with our professional security solutions.</p>
           </div>
+          <h5>Cyber Security</h5>
+          <p>Robust security audits and protection strategies to keep your digital assets safe.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
+      </div>
 
-        <div class="col-md-4">
-          <div class="service-card">
-            <i class="bi bi-cloud"></i>
-            <h5>Cloud Solutions</h5>
-            <p>Reliable and scalable cloud integration and hosting for businesses.</p>
+      <div class="col-lg-4 col-md-6">
+        <div class="service-card">
+          <div class="icon-circle">
+            <i class="bi bi-cloud-check"></i>
           </div>
+          <h5>Cloud Integration</h5>
+          <p>Scale effortlessly with our secure cloud hosting and infrastructure management.</p>
+          <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
-
       </div>
 
     </div>
-  </section>
+  </div>
+</section>
+  <footer class="footer-section">
+  <div class="footer-content">
+
+    <div class="footer-brand">
+      <h3>TymeTek</h3>
+      <p>Professional Web Design & Development Services</p>
+    </div>
+
+    <div class="footer-socials">
+      <a href="#"><i class="fi fi-brands-facebook"></i></a>
+      <a href="#"><i class="fi fi-brands-whatsapp"></i></a>
+      <a href="#"><i class="fi fi-ss-circle-envelope"></i></a>
+    </div>
+
+    <div class="footer-bottom">
+      © 2025 TymeTek. All Rights Reserved.
+    </div>
+
+  </div>
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
