new features added

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
-      <a href="pricing.html">Pricing</a>
       <a href="payment.html">Payment</a>
-      <a href="support.html" class="nav-btn">Contact</a>
+      <a href="free-consaltation.html" class="nav-btn">Contact</a>
 
     </nav>
 
@@ -44,8 +43,13 @@
     </p>
 
     <div class="hero-buttons">
-      <a href="#contact" class="primary-btn">Get a Free Quote</a>
-      <a href="#portfolio" class="secondary-btn">View Our Work</a>
+      <a href="free-consaltation.html" class="primary-btn">Get a Free Quote</a>
+      <a href="https://wa.me/923175976544?text=Hello%20Tyme%20Tek,%20I%20am%20interested%20in%20your%20services."
+   class="btn btn-success d-inline-flex align-items-center gap-4"
+   target="_blank">
+   <i class="bi bi-whatsapp"></i>
+   WhatsApp Us
+</a>
     </div>
   </div>
 </section>
@@ -65,7 +69,7 @@
       </p>
 
       <p>
-        We specialize in creating modern, responsive, and high-performing websites —
+        We specialize in creating modern, responsive, and high-performing websites 
         from business and e-commerce platforms to custom web solutions. Our focus is on
         clean design, user experience, and scalable development that supports long-term growth.
       </p>
@@ -81,61 +85,104 @@
 </section>
 
 <section class="services-section">
+   <h1>Our Services</h1>
+
   <div class="services-grid">
 
     <div class="service-card">
-      <i class="fi fi-tr-briefcase"></i>
-      <h5>Corporate & Professional Websites</h5>
-      <ul>
-        <li>Company profile website</li>
-        <li>Startup landing page</li>
-        <li>Portfolio website</li>
-        <li>Personal branding website</li>
-        <li>Resume / CV website</li>
-        <li>Agency website</li>
-        <li>NGO website</li>
-        <li>Event management website</li>
-      </ul>
-    </div>
+  <i class="fi fi-tr-globe"></i>
+  <h5>Web Development</h5>
+  <ul>
+    <li>Custom business websites</li>
+    <li>Corporate & agency websites</li>
+    <li>Landing pages & sales funnels</li>
+    <li>E-commerce websites (Shop, Cart, Checkout)</li>
+    <li>Portfolio & personal branding sites</li>
+    <li>SEO-friendly & fast loading websites</li>
+    <li>Fully responsive (Mobile, Tablet, Desktop)</li>
+  </ul>
+</div>
 
-    <div class="service-card">
-      <i class="fi fi-tr-document"></i>
-      <h5>Content & Blog Websites</h5>
-      <ul>
-        <li>Blog website</li>
-        <li>News website</li>
-        <li>Tech tutorial website</li>
-        <li>Documentation website</li>
-        <li>FAQ system</li>
-        <li>Knowledge base site</li>
-      </ul>
-    </div>
+<div class="service-card">
+  <i class="fi fi-tr-laptop"></i>
+  <h5>Software Development</h5>
+  <ul>
+    <li>Custom business software solutions</li>
+    <li>CRM & ERP systems</li>
+    <li>Inventory & management systems</li>
+    <li>Automation tools & dashboards</li>
+    <li>API development & integrations</li>
+    <li>Scalable & secure software architecture</li>
+  </ul>
+</div>
 
-    <div class="service-card">
-      <i class="fi fi-tr-dashboard"></i>
-      <h5>Dashboards & Admin Panels</h5>
-      <ul>
-        <li>Admin dashboard UI</li>
-        <li>Sales dashboard</li>
-        <li>Pharmacy stock dashboard</li>
-        <li>Student management dashboard</li>
-        <li>Attendance dashboard</li>
-        <li>Analytics dashboard</li>
-      </ul>
-    </div>
+<div class="service-card">
+  <i class="fi fi-tr-mobile"></i>
+  <h5>Mobile App Development</h5>
+  <ul>
+    <li>Android & iOS app development</li>
+    <li>Cross-platform apps (React Native / Flutter)</li>
+    <li>Business & startup mobile apps</li>
+    <li>UI/UX focused app design</li>
+    <li>API & backend integration</li>
+    <li>App performance & security optimization</li>
+  </ul>
+</div>
 
-    <div class="service-card">
-      <i class="fi fi-tr-building"></i>
-      <h5>Government & Utility Websites</h5>
-      <ul>
-        <li>Visa application UI</li>
-        <li>E-challan generator</li>
-        <li>ID card application UI</li>
-        <li>License form website</li>
-        <li>Complaint registration UI</li>
-        <li>Token management system</li>
-      </ul>
-    </div>
+<div class="service-card">
+  <i class="fi fi-tr-laptop-code"></i>
+  <h5>CMS Web Development</h5>
+  <ul>
+    <li>WordPress website development</li>
+    <li>Custom themes & plugins</li>
+    <li>Shopify & WooCommerce stores</li>
+    <li>Easy content management system</li>
+    <li>Website redesign & migration</li>
+    <li>Security & performance optimization</li>
+  </ul>
+</div>
+
+<div class="service-card">
+  <i class="fi fi-tr-brain"></i>
+  <h5>AI Tools & Automation</h5>
+  <ul>
+    <li>AI-powered web tools</li>
+    <li>Chatbots & virtual assistants</li>
+    <li>Business process automation</li>
+    <li>AI integrations (OpenAI, APIs)</li>
+    <li>Data-driven solutions</li>
+    <li>Custom AI tools for productivity</li>
+  </ul>
+</div>
+
+<div class="service-card">
+  <i class="fi fi-tr-globe"></i>
+  <h5>Other Website Solutions</h5>
+  <ul>
+    <li>NGO & non-profit websites</li>
+    <li>Educational & LMS platforms</li>
+    <li>Event & booking websites</li>
+    <li>Real estate & property websites</li>
+    <li>Healthcare & clinic websites</li>
+    <li>Startup & SaaS websites</li>
+  </ul>
+</div>
+
+<div class="service-card">
+  <i class="fi fi-tr-code"></i>
+  <h5>Website Redesign & Maintenance</h5>
+  <ul>
+    <li>Modern & professional website redesign</li>
+    <li>UI/UX improvement for better user experience</li>
+    <li>Mobile responsiveness fixes</li>
+    <li>Website speed & performance optimization</li>
+    <li>Bug fixing & error resolution</li>
+    <li>Content updates & feature enhancements</li>
+    <li>Security updates & regular backups</li>
+    <li>Ongoing website support & maintenance</li>
+  </ul>
+</div>
+
 
   </div>
 </section>
@@ -180,6 +227,112 @@
   </button>
 </div>
 </section>
+
+<section class="industries-flow py-5">
+  <div class="container">
+
+    <!-- Section Heading -->
+    <div class="text-center mb-5">
+      <h2 class="fw-bold">Our Industries</h2>
+      <p class="text-muted">
+        Industries we proudly serve with tailored digital solutions
+      </p>
+    </div>
+
+    <!-- FLOW ITEM 1 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5 text-end">
+        <div class="industry-card">
+          <i class="fi fi-tr-briefcase"></i>
+          <h6>Business & Corporate</h6>
+        </div>
+      </div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5"></div>
+    </div>
+
+    <!-- FLOW ITEM 2 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5"></div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5">
+        <div class="industry-card">
+          <i class="fi fi-tr-utensils"></i>
+          <h6>Restaurants & Cafes</h6>
+        </div>
+      </div>
+    </div>
+
+    <!-- FLOW ITEM 3 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5 text-end">
+        <div class="industry-card">
+          <i class="fi fi-tr-building"></i>
+          <h6>Real Estate</h6>
+        </div>
+      </div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5"></div>
+    </div>
+
+    <!-- FLOW ITEM 4 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5"></div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5">
+        <div class="industry-card">
+          <i class="fi fi-tr-heartbeat"></i>
+          <h6>Health & Fitness</h6>
+        </div>
+      </div>
+    </div>
+
+    <!-- FLOW ITEM 5 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5 text-end">
+        <div class="industry-card">
+          <i class="fi fi-tr-graduation-cap"></i>
+          <h6>Education</h6>
+        </div>
+      </div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5"></div>
+    </div>
+
+    <!-- FLOW ITEM 6 -->
+    <div class="row align-items-center flow-item">
+      <div class="col-md-5"></div>
+      <div class="col-md-2 d-flex justify-content-center">
+        <span class="flow-dot"></span>
+      </div>
+      <div class="col-md-5">
+        <div class="industry-card">
+          <i class="fi fi-tr-video-camera"></i>
+          <h6>Online Coaching</h6>
+        </div>
+      </div>
+    </div>
+
+    <!-- Extra Line -->
+    <div class="text-center mt-4">
+      <span class="text-muted fw-semibold">And many more industries...</span>
+    </div>
+
+  </div>
+</section>
+
+
+
 
 <section class="process-section">
   <h2 class="section-title">Our Working Process</h2>
@@ -278,28 +431,7 @@
 </section>
     
 
-<section class="cta-section">
-  <div class="cta-box">
-    <h2>Ready to Grow Your Business Online?</h2>
-    <p>
-      Let’s build a modern, fast and professional website for your brand.
-    </p>
 
-    <div class="cta-contacts">
-      <span>📱 WhatsApp: 0327-5694308</span>
-      <span>📧 Email: ma99087869@gmail.com</span>
-    </div>
-
-    <div class="cta-contacts">
-      <span>📱 WhatsApp: 0317-5976544</span>
-      <span>📧 Email: usmanhaider.webdev@gmail.com</span>
-    </div>
-
-    <a href="https://wa.me/923275694308" class="cta-btn">
-      Get Free Consultation
-    </a>
-  </div>
-</section>
 <footer class="footer-section">
   <div class="footer-content">
 
@@ -307,6 +439,10 @@
       <h3>TymeTek</h3>
       <p>Professional Web Design & Development Services</p>
     </div>
+
+    <span>📧 Email: ma99087869@gmail.com</span>
+
+    <span>📧 Email: usmanhaider.webdev@gmail.com</span>
 
     <div class="footer-socials">
       <a href="#"><i class="fi fi-brands-facebook"></i></a>
