--- a/services.html
+++ b/services.html
@@ -23,10 +23,8 @@
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="pricing.html">Pricing</a>
       <a href="payment.html">Payment</a>
-      <a href="support.html" class="nav-btn">Contact</a>
+      
     </nav>
 
   </div>
@@ -75,7 +73,7 @@
           <div class="icon-circle">
             <i class="bi bi-cpu"></i>
           </div>
-          <h5>Software Engineering</h5>
+          <h5>Software Development</h5>
           <p>Bespoke software systems designed to automate and scale your internal operations.</p>
           <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
